--- a/styles/index.css
+++ b/styles/index.css
@@ -26,6 +26,10 @@ header img {
     height: 24px;
 }
 
+header img:hover {
+    cursor: pointer;
+}
+
 .left-section, .middle-section, .right-section {
     display: flex;
     align-items: center;
@@ -70,6 +74,38 @@ header img {
     border: 1px solid rgb(21, 113, 235);
 }
 
+/** Tooltip Design starts**/
+
+.tooltip-design {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.tooltip {
+    position: absolute;
+    text-align: center;
+    bottom: -30px;
+    background-color: rgba(58, 57, 57, 0.8);
+    color: white;
+    padding: 8px;
+    border-radius: 2px;
+    z-index: 200;
+    opacity: 0;
+    visibility: hidden;
+    font-size: 13px;
+    transition: opacity 0.3s, visibility 0.3s;
+}
+
+.tooltip-design:hover .tooltip {
+    opacity: 1;
+    visibility: visible;
+}
+
+/** Tooltip Design Ends**/
+
 .search-icon {
     height: 42px;
     width: 70px;
@@ -80,8 +116,11 @@ header img {
     border-bottom-right-radius: 2px;
     margin-left: -1px;
     border: solid 1px rgb(189, 189, 189);
-
+    position: relative;
+    display: flex;
 }
+
+
 
 .voice-search-icon {
     border-radius: 500px;
@@ -90,6 +129,7 @@ header img {
     margin-left: 15px;
     border: none;
     background-color: rgb(248, 248, 248);
+    display: flex;
 }
 
 .right-section {
@@ -113,7 +153,7 @@ header img {
 }
 
 .notifications-icon {
-    height: 27px;
+    height: 25px;
 }
 
 .notification-count {
@@ -125,7 +165,7 @@ header img {
     color: white;
     border: 2px solid white;
     width: 11px;
-    height: 14px;
+    height: 13px;
     text-align: center;
     border-radius: 20px;
     padding: 3px 2px 2px 2px;
